Se modifico titulo laboral

--- a/CV/index.html
+++ b/CV/index.html
@@ -23,7 +23,7 @@
                     <dl>
                         <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Técnico en Sistemas Computacionales</dt>
                         <dd>2011-2014, Escuela Industrial y Preparatoria Técnica Pablo Livas Pte</dd>
-                        <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Licenciado en tecnologías de la información </dt>
+                        <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Licenciado en Tecnologías de la Información </dt>
                         <dd>2017-En curso, Facultad de Contaduría Púbica y Administración</dd>
                     </dl>
                 </div>
@@ -38,7 +38,7 @@
                     <dl>
                         <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Agente de Soporte Técnico Call Center</dt>
                         <dd>2016-2017, Multimedios Redes</dd>
-                        <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Técnico Programador T.C</dt>
+                        <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Programador T.C</dt>
                         <dd>2018-En curso, Facultad de Contaduría Púbica y Administración, Departamento CTIC, Área: Desarrollo de Software</dd>
                     </dl>
                 </div>
