--- a/CV/index.html
+++ b/CV/index.html
@@ -13,7 +13,7 @@
         <p style="display:inline-block;width:400px;font-weight: 200">Back-End Web Developer</p>
     </header>
     <div style="background-color:rgb(158, 173, 201);color: rgb(0, 0, 0);text-align: center;padding: 10px">
-        Estudiante de la carrera de LTI.
+        Egresado de la Carrera de L.T.I.
     </div>
     <section>
         <div style="width: 960px;margin-left: auto;margin-right: auto;">
