--- a/CV/index.html
+++ b/CV/index.html
@@ -9,8 +9,8 @@
 
 <body style="font-family:Arial, Helvetica, sans-serif;margin: 0px">
     <header style="background-color:rgb(157, 125, 187);color: rgb(255, 255, 255);text-align: center;padding:16px">
-        <h1 style="display:inline-block;width:400px;font-weight: bold">CV de Joshua Guevara</h1>
-        <p style="display:inline-block;width:400px;font-weight: 200">Back-End Web Developer</p>
+        <h1 style="display:inline-block;width:400px;font-weight: bold">CV de Edith Miranda</h1>
+        <p style="display:inline-block;width:400px;font-weight: 200">DBA en  SQL Server</p>
     </header>
     <div style="background-color:rgb(158, 173, 201);color: rgb(0, 0, 0);text-align: center;padding: 10px">
         Estudiante de la carrera de L.T.I.
