--- a/CV/index.html
+++ b/CV/index.html
@@ -9,11 +9,11 @@
 
 <body style="font-family:Arial, Helvetica, sans-serif;margin: 0px">
     <header style="background-color:rgb(157, 125, 187);color: rgb(255, 255, 255);text-align: center;padding:16px">
-        <h1 style="display:inline-block;width:400px;font-weight: bold">CV de Joshua Guevara</h1>
-        <p style="display:inline-block;width:400px;font-weight: 200">Back-End Web Developer</p>
+        <h1 style="display:inline-block;width:400px;font-weight: bold">CV de Valeria Torres</h1>
+        <p style="display:inline-block;width:400px;font-weight: 200">Front-End Web Developer</p>
     </header>
     <div style="background-color:rgb(158, 173, 201);color: rgb(0, 0, 0);text-align: center;padding: 10px">
-        Estudiante de la carrera de LTI.
+        Estudiante de la carrera de L.T.I.
     </div>
     <section>
         <div style="width: 960px;margin-left: auto;margin-right: auto;">
@@ -21,8 +21,6 @@
                 <h3 style="font-size: 36px;font-weight: bold;">Educación</h3>
                 <div>
                     <dl>
-                        <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Técnico en Sistemas Computacionales</dt>
-                        <dd>2011-2014, Escuela Industrial y Preparatoria Técnica Pablo Livas Pte</dd>
                         <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Licenciado en Tecnologías de la Información </dt>
                         <dd>2017-En curso, Facultad de Contaduría Púbica y Administración</dd>
                     </dl>
@@ -36,27 +34,14 @@
                 <h3 style="font-size: 36px;font-weight: bold;">Experiencia Profesional</h3>
                 <div>
                     <dl>
-                        <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Agente de Soporte Técnico Call Center</dt>
-                        <dd>2016-2017, Multimedios Redes</dd>
-                        <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Programador T.C</dt>
-                        <dd>2018-En curso, Facultad de Contaduría Púbica y Administración, Departamento CTIC, Área: Desarrollo de Software</dd>
+                        <dt style="font-size:22px;text-transform: uppercase;margin-bottom: 12px;margin-top: 36px;">Sin Experiencia</dt>
                     </dl>
                 </div>
             </div>
 
             <div style="margin-top: 70px;">
-                <h3 style="font-size: 36px;font-weight: bold;">Otros</h3>
-                <ul style="margin-top: 12px;padding: 0px">
-                    <li style="margin-top: 16px;">Prueba 1</li>
-                </ul>
-            </div>
-
-            <div style="margin-top: 70px;">
                 <h3 style="font-size: 36px;font-weight: bold;">Cuentas Sociales</h3>
                 <ul style="margin-top: 12px;padding: 0px">
-                    <li style="margin-top: 16px;">
-                        <a href="https://github.com/Joshgueme" target="_blank">Github</a>
-                    </li>
                 </ul>
             </div>
 
